--- a/styles/scss/desktop-1.scss
+++ b/styles/scss/desktop-1.scss
@@ -14,14 +14,14 @@ input {
 }
 body {
   width: 192rem;
-}.Background {
+}.desktop-1-c8L {
   width: 100%;
   height: 108rem;
   position: relative;
   overflow: hidden;
   background-color: rgba(241, 228, 209, 0.8999999762);
 
-  .Nutritions_chart {
+  .auto-group-imbj-cGk {
     width: 147.9rem;
     height: 45.6rem;
     position: absolute;
@@ -30,7 +30,7 @@ body {
     display: flex;
     align-items: center;
 
-    .Breakfast_div {
+    .auto-group-rtel-3Fa {
       display: flex;
       align-items: flex-end;
       flex-shrink: 0;
@@ -38,7 +38,7 @@ body {
       padding: 38rem 5.5rem 0rem 0rem;
       height: 100%;
 
-      .Breakfast_text {
+      .kahvalt-uoa {
         flex-shrink: 0;
         font-size: 3.2rem;
         white-space: nowrap;
@@ -50,14 +50,14 @@ body {
         margin: 0rem 11.3rem 1.7rem 0rem;
         font-weight: 400;
 
-        .Breakfast_text-sub-0 {
+        .kahvalt-uoa-sub-0 {
           font-size: 3.6rem;
           font-weight: 400;
           line-height: 1.2125;
           color: #020323;
           font-family: Inter, 'Source Sans Pro';
         }
-        .Breakfast_text-sub-1 {
+        .kahvalt-uoa-sub-1 {
           font-size: 3.2rem;
           font-weight: 400;
           line-height: 1.2125;
@@ -65,7 +65,7 @@ body {
           font-family: Inter, 'Source Sans Pro';
         }
       }
-      .Breakfast_Add_icon {
+      .icons8-add-50-2-1-7aC {
         vertical-align: top;
         flex-shrink: 0;
         width: 6.4rem;
@@ -74,7 +74,7 @@ body {
         object-fit: cover;
       }
     }
-    .Nutritions_Background_box {
+    .auto-group-8qet-1vU {
       border-radius: 5.2rem;
       box-sizing: border-box;
       padding: 1.1rem 5rem 1.7rem 3rem;
@@ -87,7 +87,7 @@ body {
       box-shadow: 0 0.4rem 0.4rem rgba(0, 0, 0, 0.25);
       flex-shrink: 0;
 
-      .Carb_Protein_Fat_Chart {
+      .auto-group-ur4c-ukx {
         background-size: cover;
         background-repeat: no-repeat;
         flex-shrink: 0;
@@ -101,7 +101,7 @@ body {
         margin: 0rem 33.5rem 0.6rem 34rem;
         box-sizing: border-box;
 
-        .Calorie_Calculator {
+        .item-1150-BiU {
           margin: 0rem 14.5rem 1.1rem 0rem;
           white-space: nowrap;
           align-items: baseline;
@@ -113,14 +113,14 @@ body {
           line-height: 1.2102272246;
           color: #000000;
 
-          .Calorie_Calculator-sub-0 {
+          .item-1150-BiU-sub-0 {
             color: #000000;
             font-family: Inter, 'Source Sans Pro';
             font-size: 3.6rem;
             font-weight: 400;
             line-height: 1.2125;
           }
-          .Calorie_Calculator-sub-1 {
+          .item-1150-BiU-sub-1 {
             font-size: 4.8rem;
             font-weight: 400;
             line-height: 1.2125;
@@ -128,7 +128,7 @@ body {
             font-family: Inter, 'Source Sans Pro';
           }
         }
-        .kalan_text {
+        .kalan-WGt {
           line-height: 1.2102272246;
           color: #000000;
           font-family: Inter, 'Source Sans Pro';
@@ -140,14 +140,14 @@ body {
           font-weight: 400;
           flex-shrink: 0;
 
-          .kalan_text-sub-0 {
+          .kalan-WGt-sub-0 {
             font-size: 3.6rem;
             font-weight: 400;
             line-height: 1.2125;
             color: #000000;
             font-family: Inter, 'Source Sans Pro';
           }
-          .kalan_text-sub-1 {
+          .kalan-WGt-sub-1 {
             font-size: 2.4rem;
             font-weight: 400;
             line-height: 1.2125;
@@ -156,13 +156,13 @@ body {
           }
         }
       }
-      .carb_prot_fat_div {
+      .auto-group-r6z8-ag4 {
         align-items: flex-end;
         flex-shrink: 0;
         margin: 0rem 8.2rem 1.6rem 0rem;
         display: flex;
 
-        .carb_text {
+        .karbonhidrat-gDJ {
           line-height: 1.2125;
           color: #000000;
           font-family: Inter, 'Source Sans Pro';
@@ -172,7 +172,7 @@ body {
           font-size: 3.2rem;
           font-weight: 400;
         }
-        .protein_text {
+        .protein-zjn {
           line-height: 1.2125;
           color: #000000;
           font-family: Inter, 'Source Sans Pro';
@@ -182,7 +182,7 @@ body {
           font-size: 3.2rem;
           font-weight: 400;
         }
-        .fat_text {
+        .ya-YFW {
           line-height: 1.2125;
           color: #000000;
           font-family: Inter, 'Source Sans Pro';
@@ -193,7 +193,7 @@ body {
           font-weight: 400;
         }
       }
-      .carb_prot_fat_greypart {
+      .auto-group-615w-dGx {
         margin-bottom: 2.2rem;
         width: 100%;
         height: 2.4rem;
@@ -201,7 +201,7 @@ body {
         align-items: center;
         flex-shrink: 0;
 
-        .carb_greypart {
+        .auto-group-d7ps-Mik {
           margin-right: 15.2rem;
           width: 22.6rem;
           height: 100%;
@@ -211,14 +211,14 @@ body {
           border-radius: 5.2rem;
           flex-shrink: 0;
 
-          .carb_greenpart {
+          .rectangle-7-6gL {
             width: 10.7rem;
             height: 2.4rem;
             background-color: #73f980;
             border-radius: 5.2rem;
           }
         }
-        .prot_greypart {
+        .auto-group-afa4-EZa {
           margin-right: 14.6rem;
           width: 22.6rem;
           height: 100%;
@@ -228,14 +228,14 @@ body {
           border-radius: 5.2rem;
           flex-shrink: 0;
 
-          .prot_greenpart {
+          .rectangle-8-Nvg {
             width: 10.2rem;
             height: 2.4rem;
             background-color: #73f980;
             border-radius: 5.2rem;
           }
         }
-        .fat_greypart {
+        .auto-group-3rq8-JZS {
           width: 22.6rem;
           height: 100%;
           border: solid 0.1rem #000000;
@@ -244,7 +244,7 @@ body {
           border-radius: 5.2rem;
           flex-shrink: 0;
 
-          .fat_greenpart {
+          .rectangle-9-2EY {
             background-color: #73f980;
             border-radius: 5.2rem;
             width: 17.2rem;
@@ -252,13 +252,13 @@ body {
           }
         }
       }
-      .carb_prot_fat_textlocation {
+      .auto-group-8vrg-w6c {
         margin-right: 5rem;
         display: flex;
         align-items: flex-end;
         flex-shrink: 0;
 
-        .carb_text {
+        .g-tGk {
           line-height: 1.2125;
           color: #000000;
           font-family: Inter, 'Source Sans Pro';
@@ -268,7 +268,7 @@ body {
           font-size: 3.6rem;
           font-weight: 400;
         }
-        .prot_text {
+        .g-o8p {
           font-size: 3.6rem;
           font-weight: 400;
           line-height: 1.2125;
@@ -278,7 +278,7 @@ body {
           flex-shrink: 0;
           margin-right: 20.2rem;
         }
-        .fat_text {
+        .g-JLU {
           white-space: nowrap;
           flex-shrink: 0;
           font-size: 3.6rem;
@@ -290,7 +290,7 @@ body {
       }
     }
   }
-  .background2 {
+  .auto-group-mkma-jwa {
     top: 87.6rem;
     display: flex;
     align-items: center;
@@ -299,14 +299,14 @@ body {
     position: absolute;
     left: 2.6rem;
 
-    .logout_location {
+    .auto-group-ts56-rmJ {
       flex-direction: column;
       flex-shrink: 0;
       margin: 0rem 127.447rem 1.9rem 0rem;
       align-items: flex-end;
       display: flex;
 
-      .logout {
+      .logout-3-AX6 {
         flex-shrink: 0;
         margin-bottom: 1.8rem;
         width: 6.8532rem;
@@ -315,7 +315,7 @@ body {
         object-fit: cover;
         vertical-align: top;
       }
-      .logout_text {
+      .k-yap-RC8 {
         font-weight: 400;
         line-height: 1.2125;
         color: #000000;
@@ -326,14 +326,14 @@ body {
         font-size: 3.2rem;
       }
     }
-    .food_suggest_location {
+    .auto-group-t1bj-KHW {
       flex-shrink: 0;
       margin: 2.1rem 2.7rem 0rem 0rem;
       align-items: center;
       display: flex;
       flex-direction: column;
 
-      .food_suggest_icon {
+      .rectangle-10-Ddn {
         margin-right: 0.3rem;
         width: 10.2rem;
         height: 10.6rem;
@@ -342,7 +342,7 @@ body {
         vertical-align: top;
         flex-shrink: 0;
       }
-      .food_suggest_text {
+      .yemek-nerisi-al-Mjz {
         color: #020323;
         font-family: Inter, 'Source Sans Pro';
         flex-shrink: 0;
@@ -352,14 +352,14 @@ body {
         line-height: 1.2125;
       }
     }
-    .profile_location {
+    .auto-group-bxms-tE8 {
       position: relative;
       flex-shrink: 0;
       margin: 4.5rem 4.2rem 2.3rem 0rem;
       width: 13.3rem;
       height: calc(100% - 6.8rem);
 
-      .profile_icon {
+      .rectangle-2-QiG {
         vertical-align: top;
         width: 13.3rem;
         height: 10.6rem;
@@ -369,7 +369,7 @@ body {
         top: 0;
         object-fit: cover;
       }
-      .profile_text {
+      .profil-wiC {
         top: 9.8rem;
         font-size: 3.2rem;
         line-height: 1.2125;
@@ -383,7 +383,7 @@ body {
         color: #020323;
       }
     }
-    .mainpage_location {
+    .auto-group-mwnx-p1J {
       align-items: center;
       display: flex;
       flex-direction: column;
@@ -391,7 +391,7 @@ body {
       margin: 5.4rem 0rem 2.3rem 0rem;
       height: calc(100% - 7.7rem);
 
-      .mainpage_icon {
+      .icons8-home-50-1-YT6 {
         vertical-align: top;
         flex-shrink: 0;
         margin-left: 0.1rem;
@@ -399,7 +399,7 @@ body {
         height: 8.9rem;
         object-fit: cover;
       }
-      .mainpage_text {
+      .ana-sayfa-Ube {
         font-weight: 400;
         line-height: 1.2125;
         color: #020323;
@@ -410,7 +410,7 @@ body {
       }
     }
   }
-  .background3 {
+  .auto-group-qmps-o88 {
     display: flex;
     align-items: center;
     width: 36.8rem;
@@ -419,7 +419,7 @@ body {
     left: 1.6rem;
     top: 61.4rem;
 
-    .Lunch_text {
+    .le-yemei-Uzx {
       white-space: nowrap;
       flex-shrink: 0;
       margin: 0rem 8.8rem 0.4rem 0rem;
@@ -429,7 +429,7 @@ body {
       color: #020323;
       font-family: Inter, 'Source Sans Pro';
     }
-    .lunch_icon {
+    .icons8-add-50-2-2-BeU {
       width: 6.4rem;
       height: 7.6rem;
       cursor: pointer;
@@ -438,7 +438,7 @@ body {
       flex-shrink: 0;
     }
   }
-  .snacks_location {
+  .auto-group-mtix-6Fe {
     position: absolute;
     left: 1.6rem;
     top: 70.4rem;
@@ -447,7 +447,7 @@ body {
     width: 36.8rem;
     height: 7.6rem;
 
-    .snacks_text {
+    .attrmalk-phS {
       white-space: nowrap;
       flex-shrink: 0;
       margin: 0.3rem 11.7rem 0rem 0rem;
@@ -457,7 +457,7 @@ body {
       color: #020323;
       font-family: Inter, 'Source Sans Pro';
     }
-    .snacks_icon {
+    .icons8-add-50-2-3-jpQ {
       object-fit: cover;
       vertical-align: top;
       flex-shrink: 0;
@@ -466,14 +466,14 @@ body {
       cursor: pointer;
     }
   }
-  .dinner_location {
+  .auto-group-tpcc-Umz {
     width: 37rem;
     height: 7.6rem;
     position: absolute;
     left: 1.4rem;
     top: 79.1rem;
 
-    .dinner_text {
+    .akam-yemei-Ptx {
       width: 30.7rem;
       position: absolute;
       left: 0;
@@ -488,14 +488,14 @@ body {
       color: #020323;
       white-space: nowrap;
 
-      .dinner_text-sub-0 {
+      .akam-yemei-Ptx-sub-0 {
         font-weight: 400;
         line-height: 1.2125;
         color: #020323;
         font-family: Inter, 'Source Sans Pro';
         font-size: 3.6rem;
       }
-      .dinner_text-sub-1 {
+      .akam-yemei-Ptx-sub-1 {
         font-size: 3.2rem;
         font-weight: 400;
         line-height: 1.2125;
