--- a/styles/desktop-1.css
+++ b/styles/desktop-1.css
@@ -14,14 +14,14 @@ input {
 }
 body {
   width: 192rem;
-}.Background {
+}.desktop-1-c8L {
   width: 100%;
   height: 108rem;
   position: relative;
   overflow: hidden;
   background-color: #f1e4d1;;
 }
-.Background .Nutritions_chart {
+.desktop-1-c8L .auto-group-imbj-cGk {
   width: 147.9rem;
   height: 45.6rem;
   position: absolute;
@@ -30,7 +30,7 @@ body {
   display: flex;
   align-items: center;
 }
-.Background .Nutritions_chart .Breakfast_div {
+.desktop-1-c8L .auto-group-imbj-cGk .auto-group-rtel-3Fa {
   box-sizing: border-box;
   padding: 38rem 5.5rem 0rem 0rem;
   height: 100%;
@@ -38,7 +38,7 @@ body {
   align-items: flex-end;
   flex-shrink: 0;
 }
-.Background .Nutritions_chart .Breakfast_div .Breakfast_text {
+.desktop-1-c8L .auto-group-imbj-cGk .auto-group-rtel-3Fa .kahvalt-uoa {
   margin: 0rem 11.3rem 1.7rem 0rem;
   font-size: 3.2rem;
   font-weight: 400;
@@ -50,21 +50,21 @@ body {
   align-items: baseline;
   flex-shrink: 0;
 }
-.Background .Nutritions_chart .Breakfast_div .Breakfast_text .Breakfast_text-sub-0 {
+.desktop-1-c8L .auto-group-imbj-cGk .auto-group-rtel-3Fa .kahvalt-uoa .kahvalt-uoa-sub-0 {
   font-size: 3.6rem;
   font-weight: 400;
   line-height: 1.2125;
   color: #020323;
   font-family: Inter, 'Source Sans Pro';
 }
-.Background .Nutritions_chart .Breakfast_div .Breakfast_text .Breakfast_text-sub-1 {
+.desktop-1-c8L .auto-group-imbj-cGk .auto-group-rtel-3Fa .kahvalt-uoa .kahvalt-uoa-sub-1 {
   font-size: 3.2rem;
   font-weight: 400;
   line-height: 1.2125;
   color: #020323;
   font-family: Inter, 'Source Sans Pro';
 }
-.Background .Nutritions_chart .Breakfast_div .Breakfast_Add_icon {
+.desktop-1-c8L .auto-group-imbj-cGk .auto-group-rtel-3Fa .icons8-add-50-2-1-7aC {
   margin-left: 55px;
   width: 6.4rem;
   height: 7.6rem;
@@ -73,7 +73,7 @@ body {
   vertical-align: top;
   flex-shrink: 0;
 }
-.Background .Nutritions_chart .Nutritions_Background_box {
+.desktop-1-c8L .auto-group-imbj-cGk .auto-group-8qet-1vU {
   box-sizing: border-box;
   margin-left: 100px;
   padding: 1.1rem 5rem 1.7rem 3rem;
@@ -87,7 +87,7 @@ body {
   border-radius: 5.2rem;
   flex-shrink: 0;
 }
-.Background .Nutritions_chart .Nutritions_Background_box .Carb_Protein_Fat_Chart {
+.desktop-1-c8L .auto-group-imbj-cGk .auto-group-8qet-1vU .auto-group-ur4c-ukx {
   margin: 0rem 33.5rem 0.6rem 34rem;
   box-sizing: border-box;
   padding: 6.9rem 2.6rem 8.8rem 2.6rem;
@@ -101,7 +101,7 @@ body {
   background-image: url('../assets/ellipse-2.png');
   flex-shrink: 0;
 }
-.Background .Nutritions_chart .Nutritions_Background_box .Carb_Protein_Fat_Chart .Calorie_Calculator {
+.desktop-1-c8L .auto-group-imbj-cGk .auto-group-8qet-1vU .auto-group-ur4c-ukx .item-1150-BiU {
   margin: 0rem 14.5rem 1.1rem 0rem;
   font-size: 3.6rem;
   font-weight: 400;
@@ -113,21 +113,21 @@ body {
   align-items: baseline;
   flex-shrink: 0;
 }
-.Background .Nutritions_chart .Nutritions_Background_box .Carb_Protein_Fat_Chart .Calorie_Calculator .Calorie_Calculator-sub-0 {
+.desktop-1-c8L .auto-group-imbj-cGk .auto-group-8qet-1vU .auto-group-ur4c-ukx .item-1150-BiU .item-1150-BiU-sub-0 {
   font-size: 3.6rem;
   font-weight: 400;
   line-height: 1.2125;
   color: #000000;
   font-family: Inter, 'Source Sans Pro';
 }
-.Background .Nutritions_chart .Nutritions_Background_box .Carb_Protein_Fat_Chart .Calorie_Calculator .Calorie_Calculator-sub-1 {
+.desktop-1-c8L .auto-group-imbj-cGk .auto-group-8qet-1vU .auto-group-ur4c-ukx .item-1150-BiU .item-1150-BiU-sub-1 {
   font-size: 4.8rem;
   font-weight: 400;
   line-height: 1.2125;
   color: #000000;
   font-family: Inter, 'Source Sans Pro';
 }
-.Background .Nutritions_chart .Nutritions_Background_box .Carb_Protein_Fat_Chart .kalan_text {
+.desktop-1-c8L .auto-group-imbj-cGk .auto-group-8qet-1vU .auto-group-ur4c-ukx .kalan-WGt {
   margin-right: 3rem;
   font-size: 3.6rem;
   font-weight: 400;
@@ -139,27 +139,27 @@ body {
   align-items: baseline;
   flex-shrink: 0;
 }
-.Background .Nutritions_chart .Nutritions_Background_box .Carb_Protein_Fat_Chart .kalan_text .kalan_text-sub-0 {
+.desktop-1-c8L .auto-group-imbj-cGk .auto-group-8qet-1vU .auto-group-ur4c-ukx .kalan-WGt .kalan-WGt-sub-0 {
   font-size: 3.6rem;
   font-weight: 400;
   line-height: 1.2125;
   color: #000000;
   font-family: Inter, 'Source Sans Pro';
 }
-.Background .Nutritions_chart .Nutritions_Background_box .Carb_Protein_Fat_Chart .kalan_text .kalan_text-sub-1 {
+.desktop-1-c8L .auto-group-imbj-cGk .auto-group-8qet-1vU .auto-group-ur4c-ukx .kalan-WGt .kalan-WGt-sub-1 {
   font-size: 2.4rem;
   font-weight: 400;
   line-height: 1.2125;
   color: #000000;
   font-family: Inter, 'Source Sans Pro';
 }
-.Background .Nutritions_chart .Nutritions_Background_box .carb_prot_fat_div {
+.desktop-1-c8L .auto-group-imbj-cGk .auto-group-8qet-1vU .auto-group-r6z8-ag4 {
   margin: 0rem 8.2rem 1.6rem 0rem;
   display: flex;
   align-items: flex-end;
   flex-shrink: 0;
 }
-.Background .Nutritions_chart .Nutritions_Background_box .carb_prot_fat_div .carb_text {
+.desktop-1-c8L .auto-group-imbj-cGk .auto-group-8qet-1vU .auto-group-r6z8-ag4 .karbonhidrat-gDJ {
   margin-right: 23.2rem;
   font-size: 3.2rem;
   font-weight: 400;
@@ -169,7 +169,7 @@ body {
   white-space: nowrap;
   flex-shrink: 0;
 }
-.Background .Nutritions_chart .Nutritions_Background_box .carb_prot_fat_div .protein_text {
+.desktop-1-c8L .auto-group-imbj-cGk .auto-group-8qet-1vU .auto-group-r6z8-ag4 .protein-zjn {
   margin-right: 29.9rem;
   font-size: 3.2rem;
   font-weight: 400;
@@ -179,7 +179,7 @@ body {
   white-space: nowrap;
   flex-shrink: 0;
 }
-.Background .Nutritions_chart .Nutritions_Background_box .carb_prot_fat_div .fat_text {
+.desktop-1-c8L .auto-group-imbj-cGk .auto-group-8qet-1vU .auto-group-r6z8-ag4 .ya-YFW {
   margin-bottom: 0.2rem;
   font-size: 3.2rem;
   font-weight: 400;
@@ -189,7 +189,7 @@ body {
   white-space: nowrap;
   flex-shrink: 0;
 }
-.Background .Nutritions_chart .Nutritions_Background_box .carb_prot_fat_greypart {
+.desktop-1-c8L .auto-group-imbj-cGk .auto-group-8qet-1vU .auto-group-615w-dGx {
   margin-bottom: 2.2rem;
   width: 100%;
   height: 2.4rem;
@@ -197,7 +197,7 @@ body {
   align-items: center;
   flex-shrink: 0;
 }
-.Background .Nutritions_chart .Nutritions_Background_box .carb_prot_fat_greypart .carb_greypart {
+.desktop-1-c8L .auto-group-imbj-cGk .auto-group-8qet-1vU .auto-group-615w-dGx .auto-group-d7ps-Mik {
   margin-right: 15.2rem;
   width: 22.6rem;
   height: 100%;
@@ -207,13 +207,13 @@ body {
   border-radius: 5.2rem;
   flex-shrink: 0;
 }
-.Background .Nutritions_chart .Nutritions_Background_box .carb_prot_fat_greypart .carb_greypart .carb_greenpart {
+.desktop-1-c8L .auto-group-imbj-cGk .auto-group-8qet-1vU .auto-group-615w-dGx .auto-group-d7ps-Mik .rectangle-7-6gL {
   width: 10.7rem;
   height: 2.4rem;
   background-color: #73f980;
   border-radius: 5.2rem;
 }
-.Background .Nutritions_chart .Nutritions_Background_box .carb_prot_fat_greypart .prot_greypart {
+.desktop-1-c8L .auto-group-imbj-cGk .auto-group-8qet-1vU .auto-group-615w-dGx .auto-group-afa4-EZa {
   margin-right: 14.6rem;
   width: 22.6rem;
   height: 100%;
@@ -223,13 +223,13 @@ body {
   border-radius: 5.2rem;
   flex-shrink: 0;
 }
-.Background .Nutritions_chart .Nutritions_Background_box .carb_prot_fat_greypart .prot_greypart .prot_greenpart {
+.desktop-1-c8L .auto-group-imbj-cGk .auto-group-8qet-1vU .auto-group-615w-dGx .auto-group-afa4-EZa .rectangle-8-Nvg {
   width: 10.2rem;
   height: 2.4rem;
   background-color: #73f980;
   border-radius: 5.2rem;
 }
-.Background .Nutritions_chart .Nutritions_Background_box .carb_prot_fat_greypart .fat_greypart {
+.desktop-1-c8L .auto-group-imbj-cGk .auto-group-8qet-1vU .auto-group-615w-dGx .auto-group-3rq8-JZS {
   width: 22.6rem;
   height: 100%;
   border: solid 0.1rem #000000;
@@ -238,19 +238,19 @@ body {
   border-radius: 5.2rem;
   flex-shrink: 0;
 }
-.Background .Nutritions_chart .Nutritions_Background_box .carb_prot_fat_greypart .fat_greypart .fat_greenpart {
+.desktop-1-c8L .auto-group-imbj-cGk .auto-group-8qet-1vU .auto-group-615w-dGx .auto-group-3rq8-JZS .rectangle-9-2EY {
   width: 17.2rem;
   height: 2.4rem;
   background-color: #73f980;
   border-radius: 5.2rem;
 }
-.Background .Nutritions_chart .Nutritions_Background_box .carb_prot_fat_textlocation {
+.desktop-1-c8L .auto-group-imbj-cGk .auto-group-8qet-1vU .auto-group-8vrg-w6c {
   margin-right: 5rem;
   display: flex;
   align-items: flex-end;
   flex-shrink: 0;
 }
-.Background .Nutritions_chart .Nutritions_Background_box .carb_prot_fat_textlocation .carb_text {
+.desktop-1-c8L .auto-group-imbj-cGk .auto-group-8qet-1vU .auto-group-8vrg-w6c .g-tGk {
   margin: 0rem 20.7rem 0.4rem 0rem;
   font-size: 3.6rem;
   font-weight: 400;
@@ -260,7 +260,7 @@ body {
   white-space: nowrap;
   flex-shrink: 0;
 }
-.Background .Nutritions_chart .Nutritions_Background_box .carb_prot_fat_textlocation .prot_text {
+.desktop-1-c8L .auto-group-imbj-cGk .auto-group-8qet-1vU .auto-group-8vrg-w6c .g-o8p {
   margin-right: 20.2rem;
   font-size: 3.6rem;
   font-weight: 400;
@@ -270,7 +270,7 @@ body {
   white-space: nowrap;
   flex-shrink: 0;
 }
-.Background .Nutritions_chart .Nutritions_Background_box .carb_prot_fat_textlocation .fat_text {
+.desktop-1-c8L .auto-group-imbj-cGk .auto-group-8qet-1vU .auto-group-8vrg-w6c .g-JLU {
   font-size: 3.6rem;
   font-weight: 400;
   line-height: 1.2125;
@@ -279,7 +279,7 @@ body {
   white-space: nowrap;
   flex-shrink: 0;
 }
-.Background .background2 {
+.desktop-1-c8L .auto-group-mkma-jwa {
   width: 184.4rem;
   height: 20.5rem;
   position: absolute;
@@ -288,14 +288,14 @@ body {
   display: flex;
   align-items: center;
 }
-.Background .background2 .logout_location {
+.desktop-1-c8L .auto-group-mkma-jwa .auto-group-ts56-rmJ {
   margin: 0rem 127.447rem 1.9rem 0rem;
   align-items: flex-end;
   display: flex;
   flex-direction: column;
   flex-shrink: 0;
 }
-.Background .background2 .logout_location .logout {
+.desktop-1-c8L .auto-group-mkma-jwa .auto-group-ts56-rmJ .logout-3-AX6 {
   margin-bottom: 1.8rem;
   width: 6.8532rem;
   height: 9rem;
@@ -304,7 +304,7 @@ body {
   vertical-align: top;
   flex-shrink: 0;
 }
-.Background .background2 .logout_location .logout_text {
+.desktop-1-c8L .auto-group-mkma-jwa .auto-group-ts56-rmJ .k-yap-RC8 {
   margin-right: 0.6532rem;
   max-width: 7.3rem;
   font-size: 3.2rem;
@@ -314,14 +314,14 @@ body {
   font-family: Inter, 'Source Sans Pro';
   flex-shrink: 0;
 }
-.Background .background2 .food_suggest_location {
+.desktop-1-c8L .auto-group-mkma-jwa .auto-group-t1bj-KHW {
   margin: 2.1rem 2.7rem 0rem 0rem;
   align-items: center;
   display: flex;
   flex-direction: column;
   flex-shrink: 0;
 }
-.Background .background2 .food_suggest_location .food_suggest_icon {
+.desktop-1-c8L .auto-group-mkma-jwa .auto-group-t1bj-KHW .rectangle-10-Ddn {
   margin-right: 0.3rem;
   width: 10.2rem;
   height: 10.6rem;
@@ -330,7 +330,7 @@ body {
   vertical-align: top;
   flex-shrink: 0;
 }
-.Background .background2 .food_suggest_location .food_suggest_text {
+.desktop-1-c8L .auto-group-mkma-jwa .auto-group-t1bj-KHW .yemek-nerisi-al-Mjz {
   max-width: 13.5rem;
   font-size: 3.2rem;
   font-weight: 400;
@@ -339,14 +339,14 @@ body {
   font-family: Inter, 'Source Sans Pro';
   flex-shrink: 0;
 }
-.Background .background2 .profile_location {
+.desktop-1-c8L .auto-group-mkma-jwa .auto-group-bxms-tE8 {
   margin: 4.5rem 4.2rem 2.3rem 0rem;
   width: 13.3rem;
   height: calc(100% - 6.8rem);
   position: relative;
   flex-shrink: 0;
 }
-.Background .background2 .profile_location .profile_icon {
+.desktop-1-c8L .auto-group-mkma-jwa .auto-group-bxms-tE8 .rectangle-2-QiG {
   width: 13.3rem;
   height: 10.6rem;
   cursor: pointer;
@@ -356,7 +356,7 @@ body {
   object-fit: cover;
   vertical-align: top;
 }
-.Background .background2 .profile_location .profile_text {
+.desktop-1-c8L .auto-group-mkma-jwa .auto-group-bxms-tE8 .profil-wiC {
   width: 7.8rem;
   height: 3.9rem;
   position: absolute;
@@ -369,7 +369,7 @@ body {
   font-family: Inter, 'Source Sans Pro';
   white-space: nowrap;
 }
-.Background .background2 .mainpage_location {
+.desktop-1-c8L .auto-group-mkma-jwa .auto-group-mwnx-p1J {
   margin: 5.4rem 0rem 2.3rem 0rem;
   height: calc(100% - 7.7rem);
   align-items: center;
@@ -377,7 +377,7 @@ body {
   flex-direction: column;
   flex-shrink: 0;
 }
-.Background .background2 .mainpage_location .mainpage_icon {
+.desktop-1-c8L .auto-group-mkma-jwa .auto-group-mwnx-p1J .icons8-home-50-1-YT6 {
   margin-left: 0.1rem;
   width: 9rem;
   height: 8.9rem;
@@ -385,7 +385,7 @@ body {
   vertical-align: top;
   flex-shrink: 0;
 }
-.Background .background2 .mainpage_location .mainpage_text {
+.desktop-1-c8L .auto-group-mkma-jwa .auto-group-mwnx-p1J .ana-sayfa-Ube {
   font-size: 3.2rem;
   font-weight: 400;
   line-height: 1.2125;
@@ -394,7 +394,7 @@ body {
   white-space: nowrap;
   flex-shrink: 0;
 }
-.Background .background3 {
+.desktop-1-c8L .auto-group-qmps-o88 {
   width: 36.8rem;
   height: 7.6rem;
   position: absolute;
@@ -402,9 +402,8 @@ body {
   top: 61.4rem;
   display: flex;
   align-items: center;
- 
 }
-.Background .background3 .Lunch_text {
+.desktop-1-c8L .auto-group-qmps-o88 .le-yemei-Uzx {
   margin: 0rem 8.8rem 0.4rem 0rem;
   font-size: 3.6rem;
   font-weight: 400;
@@ -414,7 +413,7 @@ body {
   white-space: nowrap;
   flex-shrink: 0;
 }
-.Background .background3 .lunch_icon {
+.desktop-1-c8L .auto-group-qmps-o88 .icons8-add-50-2-2-BeU {
   width: 6.4rem;
   height: 7.6rem;
   cursor: pointer;
@@ -422,7 +421,7 @@ body {
   vertical-align: top;
   flex-shrink: 0;
 }
-.Background .snacks_location {
+.desktop-1-c8L .auto-group-mtix-6Fe {
   width: 36.8rem;
   height: 7.6rem;
   position: absolute;
@@ -431,7 +430,7 @@ body {
   display: flex;
   align-items: flex-start;
 }
-.Background .snacks_location .snacks_text {
+.desktop-1-c8L .auto-group-mtix-6Fe .attrmalk-phS {
   margin: 0.3rem 11.7rem 0rem 0rem;
   font-size: 3.6rem;
   font-weight: 400;
@@ -441,7 +440,7 @@ body {
   white-space: nowrap;
   flex-shrink: 0;
 }
-.Background .snacks_location .snacks_icon {
+.desktop-1-c8L .auto-group-mtix-6Fe .icons8-add-50-2-3-jpQ {
   width: 6.4rem;
   height: 7.6rem;
   cursor: pointer;
@@ -449,14 +448,14 @@ body {
   vertical-align: top;
   flex-shrink: 0;
 }
-.Background .dinner_location {
+.desktop-1-c8L .auto-group-tpcc-Umz {
   width: 37rem;
   height: 7.6rem;
   position: absolute;
   left: 1.4rem;
   top: 79.1rem;
 }
-.Background .dinner_location .dinner_text {
+.desktop-1-c8L .auto-group-tpcc-Umz .akam-yemei-Ptx {
   width: 30.7rem;
   height: 4.4rem;
   position: absolute;
@@ -471,21 +470,21 @@ body {
   display: flex;
   align-items: baseline;
 }
-.Background .dinner_location .dinner_text .dinner_text-sub-0 {
+.desktop-1-c8L .auto-group-tpcc-Umz .akam-yemei-Ptx .akam-yemei-Ptx-sub-0 {
   font-size: 3.6rem;
   font-weight: 400;
   line-height: 1.2125;
   color: #020323;
   font-family: Inter, 'Source Sans Pro';
 }
-.Background .dinner_location .dinner_text .dinner_text-sub-1 {
+.desktop-1-c8L .auto-group-tpcc-Umz .akam-yemei-Ptx .akam-yemei-Ptx-sub-1 {
   font-size: 3.2rem;
   font-weight: 400;
   line-height: 1.2125;
   color: #020323;
   font-family: Inter, 'Source Sans Pro';
 }
-.Background .dinner_location .dinner_icon {
+.desktop-1-c8L .auto-group-tpcc-Umz .icons8-add-50-2-4-PR6 {
   width: 6.4rem;
   height: 7.6rem;
   cursor: pointer;
