--- a/styles/scss/desktop-1.scss
+++ b/styles/scss/desktop-1.scss
@@ -74,7 +74,7 @@ body {
         object-fit: cover;
       }
     }
-    .auto-group-8qet-1vU {
+    .blue_box {
       border-radius: 5.2rem;
       box-sizing: border-box;
       padding: 1.1rem 5rem 1.7rem 3rem;
